--- a/cyberotica.html
+++ b/cyberotica.html
@@ -3,68 +3,59 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>mikki.studio: Cyberotica</title>
+    <title>Mikki Janower: Cyberotica</title>
     <meta property="og:image" content="cyberotica/radicallove.jpg">
 </head>
 <body>
-    <section class="top">
-    <a class="name"></a>
-    <a class="projectTitle">Cyberotica</a>
-    </section>
+    <section id=navcontainer></section>
 <!--------------------------insert project information in this section ONLY----------------------->
-   <section id="project" style="display:none">
 
-
-    <div id="description"><p><i>Cyberotica</i> is an anthology of contemporary art. The book compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.</p>
+<section id="gallery">
+   
+    <div id="description">
+        <h2>Cyberotica<br></h2>
+        <p><i>Cyberotica</i> is an anthology of contemporary art. The book compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.</p>
         <p>Spanning gender politics, decolonization, and techno-utopianism, Cyberotica presents a vast narrative of identity and protest.</p>
         <p>This book was designed and completed for the BFA Capstone program at Sam Fox School of Design & Visual Arts. A full PDF — including all 234 pages + covers — is available upon request.</p>
-</div>
+    </div>
 
-    <div id="gallery">
-        <img class="lozad lazyload" data-src="cyberotica/radicallove.jpg">  
-        <div class="caption"><i>Cyberotica: Technology and Fetish in Contemporary Art,</i> 2020</div>
-        <img class="lozad lazyload" data-src="cyberotica/factoryofthesun2.jpg">  
-            <img class="lozad lazyload" data-src="cyberotica/foreword.jpg">
-        <div class="diptych">
-            <img class="lozad lazyload" data-src="cyberotica/abstract1.jpg">
-            <img class="lozad lazyload" data-src="cyberotica/contents2.jpg">
-        </div>
-            <img class="lozad lazyload" data-src="cyberotica/guiltymemory.jpg">
-            <img class="lozad lazyload" data-src="cyberotica/kentridge.jpg">
-            <img class="lozad lazyload" data-src="cyberotica/factoryofthesun.jpg"> 
-        <div class="polyptych">
-            <img class="lozad lazyload" data-src="cyberotica/zachblas.jpg">  
-            <img class="lozad lazyload" data-src="cyberotica/meatmetalcode2.jpg">
-            <img class="lozad lazyload" data-src="cyberotica/koolaidman1.jpg">
-            <img class="lozad lazyload" data-src="cyberotica/cybercinema.jpg">
-            <img class="lozad lazyload" data-src="cyberotica/gallianowang.jpg">
-            <img class="lozad lazyload" data-src="cyberotica/hownottobeseen.jpg">  
-            <img class="lozad lazyload" data-src="cyberotica/echoes.jpg">
-            <img class="lozad lazyload" data-src="cyberotica/cybeRoberta.jpg">  
-            <img class="lozad lazyload" data-src="cyberotica/cyberfeminism.jpg">
-            <img class="lozad lazyload" data-src="cyberotica/femmealien.jpg">  
-            <img class="lozad lazyload" data-src="cyberotica/chapter2head.jpg">
-            <img class="lozad lazyload" data-src="cyberotica/chapter2contents.jpg">  
-        </div>
-        <div class="diptych">
-            <img class="lozad lazyload" data-src="cyberotica/coverscan2 copy.jpg">  
-            <img class="lozad lazyload" data-src="cyberotica/backcoverwspine copy.jpg">
-        </div>
-        <img class="lozad lazyload" data-src="cyberotica/index.jpg">
+    <img class="col23 lozad lazyload" data-src="cyberotica/radicallove.jpg">  
+    <div class="col23 caption"><i>Cyberotica: Technology and Fetish in Contemporary Art,</i> 2020</div>
+    <img class="col23 lozad lazyload" data-src="cyberotica/factoryofthesun2.jpg">  
+    <img class="col23 lozad lazyload" data-src="cyberotica/foreword.jpg">
+    <div class="col23 diptych">
+        <img class="lozad lazyload" data-src="cyberotica/abstract1.jpg">
+        <img class="lozad lazyload" data-src="cyberotica/contents2.jpg">
     </div>
-       
-    <div id="projfooter">
-        <a class="btn-back flip">Back</a>
-        <a class="btn-next flip">Next</a>
+    <img class="col123 lozad lazyload" data-src="cyberotica/guiltymemory.jpg">
+    <img class="col123 lozad lazyload" data-src="cyberotica/kentridge.jpg">
+    <img class="col12 lozad lazyload" data-src="cyberotica/factoryofthesun.jpg"> 
+    <div class="col12 polyptych">
+        <img class="lozad lazyload" data-src="cyberotica/zachblas.jpg">  
+        <img class="lozad lazyload" data-src="cyberotica/meatmetalcode2.jpg">
+        <img class="lozad lazyload" data-src="cyberotica/koolaidman1.jpg">
+        <img class="lozad lazyload" data-src="cyberotica/cybercinema.jpg">
+        <img class="lozad lazyload" data-src="cyberotica/gallianowang.jpg">
+        <img class="lozad lazyload" data-src="cyberotica/hownottobeseen.jpg">  
+        <img class="lozad lazyload" data-src="cyberotica/echoes.jpg">
+        <img class="lozad lazyload" data-src="cyberotica/cybeRoberta.jpg">  
+        <img class="lozad lazyload" data-src="cyberotica/cyberfeminism.jpg">
+        <img class="lozad lazyload" data-src="cyberotica/femmealien.jpg">  
+        <img class="lozad lazyload" data-src="cyberotica/chapter2head.jpg">
+        <img class="lozad lazyload" data-src="cyberotica/chapter2contents.jpg">  
+     </div>
+    <img class="col123 lozad lazyload" data-src="cyberotica/index.jpg">
+    <div class="col23 diptych">
+        <img class="lozad lazyload" data-src="cyberotica/coverscan2 copy.jpg">  
+        <img class="lozad lazyload" data-src="cyberotica/backcoverwspine copy.jpg">
     </div>
+
+</section>
+<div id="projfooter"></div>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-</section>
-<section class="bottom"></section>
-<!--<div class="querytown"></div>-->
 
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
