--- a/fossora.html
+++ b/fossora.html
@@ -2,79 +2,69 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>mikki.studio: Björk | fossora</title>
+    <title>Mikki Janower: fossora, Björk</title>
     <meta property="og:image" content="mhns/mhns.png">
 </head>
 
 <body>
-    <section class="top">
-        <a class="name"></a>
-        <a class="projectTitle">Björk: fossora</a>
-    </section>
-
-    <section id="project" style="display:none">
+<section id=navcontainer></section>
 
 <!--------------------------insert project information below this line----------------------->
+ <div id="gallery">
+        <div class="description">
+            <h2>fossora<br><span class="client">Björk</span></h2>
+                <p>Immersive virtual environment for fossora, the critically acclaimed and Grammy-nominated studio album by Björk. A follow-up to Utopia (2017), fossora explores a fungal wonderland rich with mycelial networks, human entanglements, and thunderous basslines. In digital space, the album unfolds into a lush, dark landscape, siting excerpts; marginalia; and written commentary from Björk. </p>
+                <p>The site launched in stages — in step with the eponymous album's content — over several months. Built between NYC and Reykjavík in community with Björk, OLI Records, M/M Paris, and the creative team at Squarespace. Björk's team will continue to build out the site over the coming months.</p>
+                <p>Album artwork and CGI: M/M Paris</a><br>
+                Creative Directors: Satu Pelkonen, Ben Hughes<br>
+                Producers: Sion Prys, Erica Kung<br>
+                Creative Consultant: Albert Chang<br>
+                Developer: Siman Li<br>
+                Made with Squarespace<br></p>
+        </div>
 
-    <div id="description">
-        <p>Immersive virtual environment for fossora, the critically acclaimed and Grammy-nominated studio album by Björk. A follow-up to Utopia (2017), fossora explores a fungal wonderland rich with mycelial networks, human entanglements, and thunderous basslines. In digital space, the album unfolds into a lush, dark landscape, siting excerpts; marginalia; and written commentary from Björk. </p>
-        <p>The site launched in stages — in step with the eponymous album's content — over several months. Built between NYC and Reykjavík in community with Björk, OLI Records, M/M Paris, and the creative team at Squarespace. Björk's team will continue to build out the site over the coming months.</p>
-        <p>Album artwork and CGI: M/M Paris</a><br>
-        Creative Directors: Satu Pelkonen, Ben Hughes<br>
-        Producers: Sion Prys, Erica Kung<br>
-        Creative Consultant: Albert Chang<br>
-        Developer: Siman Li<br>
-        Made with Squarespace<br></p></div>
-    </div>
-
-    <div id="gallery">
-        <img src="fossora/bjork-fossora-landing.jpg">
-        <img src="fossora/bjork-ovule-24.jpg">
-        <div class="subhead">b2. ancestress</div>
-            <img class="lozad lazyload" data-src="fossora/bjork-ancestress-30-mikki.jpg">
+    <img class="col23" src="fossora/bjork-fossora-landing.jpg">
+    <img class="col23" src="fossora/bjork-ovule-24.jpg">
+    <div class="subhead col23">b2. ancestress</div>
+        <img class="lozad lazyload col23" data-src="fossora/bjork-ancestress-30-mikki.jpg">
+        <div class="diptych col23">
             <img class="lozad lazyload" data-src="fossora/bjork-ancestress-3-mikki.jpg">
-            <img class="lozad lazyload" data-src="fossora/bjork-ancestress-9-mikki.jpg">
             <img class="lozad lazyload" data-src="fossora/bjork-ancestress-10-mikki.jpg">
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="fossora/bjork-ancestress-12-mikki.jpg">  
-                <img class="lozad lazyload" data-src="fossora/bjork-ancestress-13-mikki.jpg">
-            </div>
-            <img class="lozad lazyload" data-src="fossora/bjork-ancestress-29-mikki.jpg">
-        <div class="caption">Featuring stills from ancestress, directed by Andrew Thomas Huang and costumed by Pier Paolo Piccioli for Valentino.</div>
-        <div class="subhead">a2. ovule</div>
-            <img class="lozad lazyload" data-src="fossora/bjork-ovule-2.jpg">  
-            <img class="lozad lazyload" data-src="fossora/bjork-ovule-9.jpg">
-            <img class="lozad lazyload" data-src="fossora/bjork-ovule-10.jpg">
-            <img class="lozad lazyload" data-src="fossora/bjork-ovule.jpg">  
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="fossora/bjork-ovule-6.jpg">  
-                <img class="lozad lazyload" data-src="fossora/bjork-ovule-8.jpg">
-            </div>
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="fossora/bjork-ovule-11.jpg">  
-                <img class="lozad lazyload" data-src="fossora/bjork-ovule-5.jpg">
-            </div>
-            <img class="lozad lazyload" data-src="fossora/bjork-ovule-4.jpg"> 
-            <img class="lozad lazyload" data-src="fossora/bjork-ovule-15.jpg"> 
-        <div class="caption">Featuring stills from ovule, directed by Nick Knight and costumed by Alessandro Michele for Gucci.</div>
-        <div class="subhead">a1. atopos </div>
-            <img class="lozad lazyload" data-src="fossora/bjork-ovule-19.jpg">
-            <img class="lozad lazyload" data-src="fossora/bjork-ovule-18.jpg">
-            <img class="lozad lazyload" data-src="fossora/bjork-ovule-16.jpg">
-        <div class="caption">Featuring stills from atopos, directed by Vidar Logi and costumed by Burberry.</div>
+        </div>
+        <img class="lozad lazyload col123" data-src="fossora/bjork-ancestress-9-mikki.jpg">
+        <div class="diptych col23">
+            <img class="lozad lazyload" data-src="fossora/bjork-ancestress-12-mikki.jpg">  
+            <img class="lozad lazyload" data-src="fossora/bjork-ancestress-13-mikki.jpg">
+        </div>
+        <img class="lozad lazyload col23" data-src="fossora/bjork-ancestress-29-mikki.jpg">
+        <div class="caption col23">Featuring stills from ancestress, directed by Andrew Thomas Huang and costumed by Pier Paolo Piccioli for Valentino.</div>
+        <div class="subhead col12">a2. ovule</div>
+            <img class="lozad lazyload col12" data-src="fossora/bjork-ovule-2.jpg">  
+            <img class="lozad lazyload col123" data-src="fossora/bjork-ovule-9.jpg">
+            <img class="lozad lazyload col1" data-src="fossora/bjork-ovule.jpg"> 
+            <img class="lozad lazyload col23" data-src="fossora/bjork-ovule-10.jpg"> 
+            <img class="lozad lazyload col3" data-src="fossora/bjork-ovule-6.jpg">  
+        <div class="diptych col23">
+            <img class="lozad lazyload col" data-src="fossora/bjork-ovule-8.jpg">
+            <img class="lozad lazyload col" data-src="fossora/bjork-ovule-11.jpg">
+        </div>
+        <div class="diptych col23">
+            <img class="lozad lazyload col2" data-src="fossora/bjork-ovule-5.jpg">
+            <img class="lozad lazyload col3" data-src="fossora/bjork-ovule-4.jpg"> 
+        </div>  
+            <img class="lozad lazyload col123" data-src="fossora/bjork-ovule-15.jpg"> 
+        <div class="caption col23">Featuring stills from ovule, directed by Nick Knight and costumed by Alessandro Michele for Gucci.</div>
+        <div class="subhead col12">a1. atopos </div>
+            <img class="lozad lazyload col12" data-src="fossora/bjork-ovule-19.jpg">
+            <img class="lozad lazyload col123" data-src="fossora/bjork-ovule-18.jpg">
+            <img class="lozad lazyload col23" data-src="fossora/bjork-ovule-16.jpg">
+        <div class="caption col23">Featuring stills from atopos, directed by Vidar Logi and costumed by Burberry.</div>
     </div>
        
-    <div id="projfooter">
-        <a class="btn-back flip">Back</a>
-        <a class="btn-next flip">Next</a>
-    </div>
-
+    <div id="projfooter"></div>
 <!--------------------------end of project-specific code------------------------->
-</section>
- <section class="bottom"></section>
 
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
