--- a/index.html
+++ b/index.html
@@ -1,152 +1,101 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
     <meta property="og:image" content="assets/social_share2.png">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+    <title>Mikki Janower: Portfolio</title>
 </head>
 <body>
-
 <!--------------------------insert page-specific information in this section ONLY----------------------->
-<section id="fullindex">
-<div id="aboutContainer">
-    <div id="about" style="display:none;">
-        <a class="name indexname"></a>
-       <h3 class="p"><p>Mikki Janower is a multidisciplinary designer and researcher logging on from Brooklyn, NY. She's currently a brand designer at <a href="https://www.squarespace.com/" target="_blank">Squarespace</a>; and maintains an independent practice across media, music, and the arts.</h3>
-       <div class = "cv">
-         <div class="contact cv-item">
-            <div class="links">
-                <!--<p style="opacity:.5">Contact</p>-->
-                <a href="mailto:info@mikki.studio" target="_blank">Email</a><br><a href="https://www.instagram.com/_miikki/" target="_blank"> Instagram</a><br><a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a><a href="assets/Mikki Janower CV.pdf" target="_blank">CV</a></div>
-        </div>
-     <!--     <div class="cv-item clients">
-                <p style="opacity:.5; margin-bottom:4px;">Select Clients</p>
-                <a href="https://nytimes.com" target="_blank">The New York Times</a><br>
-                <a href="https://bjork.com" target="_blank">Björk</a><br>
-                <a href="https://guggenheim.org" target="_blank">The Guggenheim</a><br>
-                <a href="https://thebaffler.com" target="_blank">The Baffler</a><br>
-                <a href="https://princeton.edu" target="_blank">Princeton University</a><br>
-            </div>
-            <div class="cv-item clients">
-                <p style="opacity:0; margin-bottom:4px;">Select Clients</p>
-                <a href="https://cueartfoundation.org" target="_blank">CUE Art Foundation</a><br>
-                <a href="https://nike.com" target="_blank">Nike</a><br>
-                <a href="https://kickstarter.com" target="_blank">Kickstarter</a><br>
-                <a href="https://thecreativeindependent.com" target="_blank">The Creative Independent</a><br>
-                <a href="https://acompi.nyc" target="_blank">ACOMPI</a><br>
-            </div>
+<section id="navcontainer"></section>  
 
-            <div class="cv-item awards">
-                <p style="opacity:.5; margin-bottom:4px;">Awards</p>
-                    <p><a href="" target="_blank">Art Director's Club Awards, 2023</a><br>
-                    <a href="https://winners.webbyawards.com/2023/advertising-media-pr/individual/social-video/239173/squarespace-icons-01-bjrk" target="_blank">Webby Awards, 2023</a><br>
-                    <a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">The Design Kids, 2020</a><br>
-                </div>
-        </div>
-    </div>-->
-</div>
+<div class="listing" data-link="fossora.html">
+    <h2 class="col1">fossora<br><span class="client">Björk</span></h2>
+    <img class="col23" src="fossora/bjork-ovule-22.jpg">
 </div>
 
-<div class="listing"  data-link="fossora.html">
-    <div class="info"><span class="title">fossora</span>
-    <br><span class="description">Björk</span></div>
-    <div class="images"><img src="fossora/bjork-ovule-thumbnail1.jpg"><img src="fossora/bjork-ovule-thumbnail2.jpg"></div>
+<div class="listing" data-link="mhns.html">
+    <h2>Money Has No Smell<br><span class="client">CUE Art Foundation</span></h2>
+    <img src="mhns/mhns-thumbnail.png">
+    <img src="mhns/catalog-thumbnail.gif">
 </div>
 
-<div class="listing"  data-link="mhns.html">
-    <div class="info"><span class="title"><i>Money Has No Smell</i></span>
-    <br><span class="description">CUE Art Foundation</span></div>
-    <div class="images"><img src="mhns/mhns-thumbnail.png"><img src="mhns/catalog-thumbnail.gif"></div>
-</div>
-
-<div class="listing"  data-link="community.html">
-    <div class="info"><span class="title"><i>A Community is a Garden</i></span>
-    <br><span class="description">The Guggenheim Museum</span></div>
-    <div class="images"><img class="lozad lazyload" data-src="community/contents-thumbnail.jpg"><img class="lozad lazyload" data-src="community/cover-thumbnail.jpg"></div>
+<div class="listing" data-link="community.html">
+    <img class="lozad lazyload col12" data-src="community/contents.jpg">
+    <h2>A Community is a Garden<br><span class="client col3">The Guggenheim Museum</span></h2>
 </div>
 
 <div class="listing" data-link="leren.html">
-    <div class="info"><span class="title">Site + Identity</span>
-    <br><span class="description">Le Ren</span></div>
-    <div class="images"><img class="lozad lazyload" data-src="leren/wordmark-thumbnail.png"><img class="lozad lazyload" data-src="leren/leren-thumbnail.gif"></div>
+    <h2>Site + Identity<br><span class="client">Le Ren</span></h2>
+    <img class="lozad lazyload" data-src="leren/wordmark-thumbnail.png">
+    <img class="lozad lazyload" data-src="leren/leren-thumbnail.gif">
 </div> 
 
 <div class="listing" data-link="nytimes.html">
-    <div class="info"><span class="title">Design and AD</span>
-    <br><span class="description">The New York Times</span></div>
-    <div class="images"><img class="lozad lazyload" data-src="nytimes/nyt15-thumbnail.png"><img class="lozad lazyload" data-src="nytimes/powell-thumbnail.png"></div>
+    <h2>Design and AD<br><span class="client">The New York Times</span></h2>
+    <img class="lozad lazyload col23" data-src="nytimes/nyt15.png">
 </div> 
 
 <div class="listing" data-link="spaceopera.html">
-    <div class="info"><span class="title">Illustrations</span>
-    <br><span class="description">The Baffler</span></div>
-    <div class="images"><img class="lozad lazyload" data-src="spaceopera/spaceopera1-thumbnail.png"><img class="lozad lazyload" data-src="spaceopera/spaceopera3-thumbnail.png"></div>
+    <h2>Illustrations<br><span class="client">The Baffler</span></h2>
+    <img class="lozad lazyload" data-src="spaceopera/spaceopera1-thumbnail.png">
+    <img class="lozad lazyload" data-src="spaceopera/spaceopera3-thumbnail.png">
 </div>
 
 <div class="listing" data-link="transientgrounds.html">
-    <div class="info"><span class="title"></i>Transient Grounds</i></span>
-    <br><span class="description">ACOMPI x NARS Foundation</span></div>
-    <div class="images"><img class="lozad lazyload" data-src="transientgrounds/subwayposter1-thumbnail.png"><img class="lozad lazyload" data-src="transientgrounds/subwayposter2-thumbnail.png"></div>
+    <h2>Transient Grounds<br><span class="client">ACOMPI x NARS Foundation</h2>
+    <img class="lozad lazyload" data-src="transientgrounds/subwayposter1-thumbnail.png">
+    <img class="lozad lazyload" data-src="transientgrounds/subwayposter2-thumbnail.png">
 </div>
 
 <div class="listing" data-link="cyberotica.html">
-    <div class="info"><span class="title"></i>Cyberotica</i></span>
-    <br><span class="description">Editorial Design</span></div>
-    <div class="images"><img class="lozad lazyload" data-src="cyberotica/radicallove-thumbnail.jpg"><img class="lozad lazyload" data-src="cyberotica/index-thumbnail.jpg"></div>
+    <img class="lozad lazyload col12" data-src="cyberotica/jeong.jpg">
+    <h2><span class="col3">Cyberotica</span></h2>
 </div>
 
 <div class="listing" data-link="joshualeifer.html">
-    <div class="info"><span class="title">Portfolio</span>
-    <br> <span class="description">Joshua Leifer</span></div>
-    <div class="images"><img class="lozad lazyload" data-src="joshualeifer/jleifer1-thumbnail.png"><img class="lozad lazyload" data-src="joshualeifer/joshualeifer-thumbnail.gif"></div>   
+    <img class="lozad lazyload col12" data-src="joshualeifer/jleifer-05.png">   
+    <h2><span class="client col3">Portfolio</span><br>Joshua Leifer</h2>
 </div>
 
-<div class="listing" data-link="mariovoid.html">
-    <div class="info"><span class="title">Super Mario Void</span>
-        <br> <span class="description">Web design and development</span></div>
-        <div class="images"><img class="lozad lazyload" data-src="mariovoid/thumbnail-thumbnail.png"><img class="lozad lazyload" data-src="mariovoid/gameover-thumbnail.png"></div>
+<!--<div class="listing" data-link="mariovoid.html">
+    <h2><span class="title">Super Mario Void</span></h2>
+    <img class="lozad lazyload" data-src="mariovoid/thumbnail-thumbnail.png">
+    <img class="lozad lazyload" data-src="mariovoid/gameover-thumbnail.png">
+</div>-->
+
+<div class="listing" data-link="reconnatypeface.html">
+    <h2>Reconna<br><span class="client">Type Design</span></h2>   
+    <img class="lozad lazyload" data-src="reconna/IMG_1237-thumbnail.jpg">
+    <img class="lozad lazyload" data-src="reconna/IMG_1234-thumbnail.jpg">
 </div>
 
 <div class="listing" data-link="sober21.html">
-    <div class="info"><span class="title"></i>Sober 21</i></span>
-    <br><span class="description">The Creative Independent</span></div>
-    <div class="images"><img class="lozad lazyload" data-src="sober21/IMG_6556-thumbnail.jpg"><img class="lozad lazyload" data-src="sober21/IMG_6445-thumbnail.jpg"></div>
-</div>
-
-<div class="listing" data-link="reconnatypeface.html">
-    <div class="info"><span class="title">Reconna</span>
-    <br> <span class="description">Type Design</span></div>   
-    <div class="images"><img class="lozad lazyload" data-src="reconna/IMG_1237-thumbnail.jpg"><img class="lozad lazyload" data-src="reconna/IMG_1234-thumbnail.jpg"></div>
+    <h2>Sober 21<br><span class="client">The Creative Independent</span></h2>
+   <img class="lozad lazyload" data-src="sober21/IMG_6427 copy.jpg">
+   <img class="lozad lazyload" data-src="sober21/IMG_6445 copy.jpg">
 </div>
 
 <div class="listing" data-link="reflections.html">
-    <div class="info"><span class="title">Reflections on Practice</span>
-    <br><span class="description">Editorial Design<br></span></div>
-    <div class="images"><img class="lozad lazyload" data-src="reflections/IMG_6544-thumbnail.jpg"><img class="lozad lazyload" data-src="reflections/IMG_6714-thumbnail.jpg"></div>
+    <h2>Reflections on Practice</h2>
+   <img class="lozad lazyload" data-src="reflections/IMG_6544-thumbnail.jpg">
+   <img class="lozad lazyload" data-src="reflections/IMG_6714-thumbnail.jpg">
 </div>
 
 <div class="listing" data-link="postcursor.html">
-    <div class="info"><span class="title">Postcursor / Starrynite</span>
-    <br><span class="description">Machine learning, web development</span></div>
-    <div class="images"><img class="lozad lazyload" data-src="postcursor/postcursor-02-thumbnail.png"><img class="lozad lazyload" data-src="postcursor/postcursor-04-thumbnail.png"></div>
-</div>
-
-
-<div class="more">
-  <p>Resume and information available upon request<br>Design and development: Mikki Janower, 2023</p>
+    <h2>Postcursor / Starrynite</h2>
+    <img class="lozad lazyload" data-src="postcursor/postcursor-02-thumbnail.png">
+    <img class="lozad lazyload" data-src="postcursor/postcursor-04-thumbnail.png">
 </div>
 
 <!-----------------scripts and end tags below — do not touch---------->
-</section>  
 <!--<div class="querytown"></div>-->
 
 <script src="assets/jquery.min.js"></script>
 <script src="js/projects.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
-
 
 </body>
 
