--- a/mariovoid.html
+++ b/mariovoid.html
@@ -2,47 +2,39 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>mikki.studio: Super Mario Void</title>
+    <title>Mikki Janower: Super Mario Void</title>
     <meta property="og:image" content="mariovoid/smv4.png">
 </head>
 
 <body>
-    <section class="top">
-    <a class="name"></a>
-    <a class="projectTitle">Super Mario Void</a>
-    </section>
+    <section id=navcontainer></section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
-    <section id="project" style="display:none">
+<section id="gallery">
 
-
-
-    <div id="description"><p>Play Nintendo à la Nietzsche! Help your favorite cartoon run ceaselessly into a neverending abyss—before time runs out. Good luck out there, and remember: you can't win.</p>
+    <div class="description">
+        <h2>Super Mario Void</h2>
+        <p>Play Nintendo à la Nietzsche! Help your favorite cartoon run ceaselessly into a neverending abyss—before time runs out. Good luck out there, and remember: you can't win.</p>
         <p>This game is unaffiliated with the Super Mario Bros franchise and all too relevant to our interminable, meaningless existence.</p>
         <p>Feeling hopeless? <a href="https://mikki-janower.github.io/supermariovoid/" target= "_blank">Play the game</a>Merch is sold out, but <a href="https://everpress.com/mariovoid" target= "_blank">you can check it out anyway.</a>
     </div>
 
-    <div id="gallery">
-        <img src="mariovoid/thumbnail.png">
-        <div class="caption">Super Mario Void, 2019</div>
-        <img class="lozad lazyload" data-src="mariovoid/smv4.png">
+    <img class="col23" src="mariovoid/thumbnail.png">
+    <div class="col23 caption">Super Mario Void, 2019</div>
+    <img class="col23 lozad lazyload" data-src="mariovoid/smv4.png">
+    <div class="col23 diptych">
         <img class="lozad lazyload" data-src="mariovoid/smv1.png">
         <img class="lozad lazyload" data-src="mariovoid/smv2.png">
-        <img class="lozad lazyload" data-src="mariovoid/smv3.png">
-         </div>
-       
-         <div id="projfooter">
-            <a class="btn-back flip">Back</a>
-            <a class="btn-next flip">Next</a>
-        </div>
+    </div>
+    <img class="col23 lozad lazyload" data-src="mariovoid/smv3.png">
 
+</section>     
+<div id="projfooter"></div>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-</section>
-<section class="bottom"></section>
+
     
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
