--- a/mhns.html
+++ b/mhns.html
@@ -2,80 +2,70 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>mikki.studio: Money Has No Smell</title>
+    <title>Mikki Janower: Money Has No Smell</title>
     <meta property="og:image" content="mhns/mhns.png">
 </head>
 
 <body>
-    <section class="top">
-        <a class="name"></a>
-        <a class="projectTitle">Money Has No Smell</a>
-    </section>
-
-    <section id="project" style="display:none">
+    <section id=navcontainer></section>
 
 <!--------------------------insert project information below this line----------------------->
-
-    <div id="description">
+<section id="gallery">
+    <div class="description">
+        <h2>Money Has No Smell<br><span class="client">CUE Art Foundation</span></h2>
         <p><i>Money Has No Smell</i> presented works by three artists: Ignacio Gatica, Mariana Parisca, and Gabriella Torres-Ferrer. Curated by <a href="https://www.acompi.nyc/money-has-no-smell" target="_blank">ACOMPI</a> (Jack Radley and Constanza Valenzuela) and mentored by Rosario Güiraldes, the exhibition brings together recent works that trace flows of currency to and from the artists’ places of origin, in the process addressing the complexity of globalized and interdependent financial systems.</p>
         <p>The exhibition's identity co-opts the language of capital, acknowledging its staying power, ubiquity, and bizarre camp. Pinned beneath a labyrinth of vector art — pulled from cryptocurrency renders and flattened into a simulated watermark — lies the exhibition's logo, set in a typeface recognizable by its presence on NYPD's headquarters; Chilean government communications; and other emblems of capitalist authority. The accompanying catalogue, set in both orientations, asks the viewer to consider its content from multiple angles; and has since been shown at NADA Miami.</p>
-        <p>You can read about the exhibition on Hyperallergic or The New York Times. </p></div>
+        <p>You can read about the exhibition on Hyperallergic or The New York Times. </p>
     </div>
 
-    <div id="gallery">
-        <img src="mhns/mhns.png">
-            <img class="lozad lazyload" data-src="mhns/mhns4.png">
-            <img class="lozad lazyload" data-src="mhns/mhns3.png">
-            <div class="caption">Web and social graphics for <i>Money Has No Smell</i>.<span class="citation">Typeset in Friz Quadrata Pro by Ernst Friz and Victor Caruso; and Radion A by General Type Studio.</span></div>
-            <img class="lozad lazyload" data-src="mhns/catgalog.gif">
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="mhns/mhns5.png">
-                <img class="lozad lazyload" data-src="mhns/mhns13.png">  
-            </div>
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="mhns/mhns6.png">
-                <img class="lozad lazyload" data-src="mhns/mhns7.png">  
-            </div>
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="mhns/mhns16.png">
-                <img class="lozad lazyload" data-src="mhns/mhns12.png">  
-            </div>
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="mhns/mhns15.png">
-                <img class="lozad lazyload" data-src="mhns/mhns8.png">  
-            </div>
-            <img class="lozad lazyload" data-src="mhns/mhns20.png">
-            <img class="lozad lazyload" data-src="mhns/mhns18.png">
-            <div class="caption">Exhibition Catalog for <i>Money Has No Smell</i><span class="citation">Typeset in Radion A by General Type Studio; printed by Conveyor Press</span></div>
+
+    <img class="col23" src="mhns/mhns.png">
+    <img class="col23 lozad lazyload" data-src="mhns/mhns4.png">
+    <img class="col23 lozad lazyload" data-src="mhns/mhns3.png">
+    <div class="col23 caption">Web and social graphics for <i>Money Has No Smell</i>.<span class="citation">Typeset in Friz Quadrata Pro by Ernst Friz and Victor Caruso; and Radion A by General Type Studio.</span></div>
+    <img class="col23 lozad lazyload" data-src="mhns/catgalog.gif">
+    <div class="col23 diptych">
+         <img class="lozad lazyload" data-src="mhns/mhns5.png">
+        <img class="lozad lazyload" data-src="mhns/mhns13.png">  
+    </div>
+    <div class="col23 diptych">
+        <img class="lozad lazyload" data-src="mhns/mhns6.png">
+        <img class="lozad lazyload" data-src="mhns/mhns7.png">  
+    </div>
+    <div class="col23 diptych">
+        <img class="lozad lazyload" data-src="mhns/mhns16.png">
+        <img class="lozad lazyload" data-src="mhns/mhns12.png">  
+    </div>
+    <div class="col23 diptych">
+        <img class="lozad lazyload" data-src="mhns/mhns8.png"> 
+        <img class="lozad lazyload" data-src="mhns/mhns15.png">
+    </div>
+
+    <img class="col12 lozad lazyload" data-src="mhns/mhns20.png">
+    <img class="col123 lozad lazyload" data-src="mhns/mhns18.png">
+    <div class="col23 caption">Exhibition Catalog for <i>Money Has No Smell</i><span class="citation">Typeset in Radion A by General Type Studio; printed by Conveyor Press</span></div>
             
-            <img class="lozad lazyload" data-src="mhns/jenica_heintzelman2.jpeg"></img>
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="mhns/jenica_heintzelman.jpeg">
-                <img class="lozad lazyload" data-src="mhns/jenica_heintzelman1.jpeg">  
-            </div>
-            <div class="caption">Exhibition graphics at the opening of <i>Money Has No Smell</i><span class="citation">Photographs by Jenica Heintzelman</span></div>
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="mhns/jenica_heintzelman-9568.jpg">
-                <img class="lozad lazyload" data-src="mhns/jenica_heintzelman-9698.jpg">  
-            </div>
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="mhns/jenica_heintzelman-9638.jpg">
-                <img class="lozad lazyload" data-src="mhns/jenica_heintzelman-9805.jpg">  
-            </div>
-            <div class="caption">Exhibition details from <i>Money Has No Smell</i><span class="citation">Photographs by Jenica Heintzelman</span></div>
+    <img class="col23 lozad lazyload" data-src="mhns/jenica_heintzelman2.jpeg"></img>
+    <div class="col23 diptych">
+        <img class="lozad lazyload" data-src="mhns/jenica_heintzelman.jpeg">
+        <img class="lozad lazyload" data-src="mhns/jenica_heintzelman1.jpeg">  
     </div>
-       
-    <div id="projfooter">
-        <a class="btn-back flip">Back</a>
-        <a class="btn-next flip">Next</a>
+    <div class="col23 caption">Exhibition graphics at the opening of <i>Money Has No Smell</i><span class="citation">Photographs by Jenica Heintzelman</span></div>
+    <div class="col23 diptych">
+        <img class="lozad lazyload" data-src="mhns/jenica_heintzelman-9568.jpg">
+        <img class="lozad lazyload" data-src="mhns/jenica_heintzelman-9698.jpg">  
     </div>
+    <div class="col23 diptych">
+        <img class="lozad lazyload" data-src="mhns/jenica_heintzelman-9638.jpg">
+        <img class="lozad lazyload" data-src="mhns/jenica_heintzelman-9805.jpg">  
+     </div>
+    <div class="col23 caption">Exhibition details from <i>Money Has No Smell</i><span class="citation">Photographs by Jenica Heintzelman</span></div>
+</section>
+    <div id="projfooter"></div>
 
 <!--------------------------end of project-specific code------------------------->
-</section>
- <section class="bottom"></section>
 
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
