--- a/nytimes.html
+++ b/nytimes.html
@@ -3,83 +3,73 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>mikki.studio: The New York Times</title>
+    <title>Mikki Janower: The New York Times</title>
     <meta property="og:image" content="nytimes/nyt15.png">
 </head>
 <body>
-    <section class="top">
-    <a class="name"></a>
-    <a class="projectTitle">The New York Times</a>
-    </section>
+    <section id=navcontainer></section>
 <!--------------------------insert project information in this section ONLY----------------------->
-   <section id="project" style="display:none">
+<section id="gallery"> 
 
-    <div id="description"> <p>Over more than a year and a half in the New York Times Newsroom, worked closely with the design directors of News Print Design to refresh the robust design system of the newspaper’s A and B-books. While the long-term project unfolds, tackling news design and art direction, from deadline projects to advance layouts to commissioned illustrations. </p>
+    <div class="description">
+        <h2>Design and Art Direction<br><span class="client">The New York Times</span></h2>
+        <p>Over more than a year and a half in the New York Times Newsroom, worked closely with the design directors of News Print Design to refresh the robust design system of the newspaper’s A and B-books. As the long-term project unfolded, tackled news design and art direction, from deadline projects to advance layouts to commissioned illustrations. </p>
    </div> 
 
-   <div id="gallery"> 
-    <img src="nytimes/nyt15.png"> 
-    <div class="caption">"Drought and Abundance in Iraq's Marshes".<span class="citation">Words and Photographs by Emilienne Malfatto.</span></div>   
+    <img class="col23" src="nytimes/nyt15.png"> 
+    <div class="col23 caption">"Drought and Abundance in Iraq's Marshes".<span class="citation">Words and Photographs by Emilienne Malfatto.</span></div>   
 
-    <div class="subhead" style="margin-top:0px;">News Design</div>
-    <div class="caption">Select layouts for the New York Times.</div>
+    <div class="col23 subhead" style="margin-top:0px;">News Design</div>
+    <div class="col23 caption">Select layouts for the New York Times.</div>
 
-            <img class="lozad lazyload" data-src="nytimes/missouri-guns.png">
-            <div class="caption">"Inside Missouri's '2nd Amendment Sanctuary' Fight".<span class="citation">Words by Glenn Thrush</span></div>
+    <img class="col23 lozad lazyload" data-src="nytimes/missouri-guns.png">
+    <div class="col23 caption">"Inside Missouri's '2nd Amendment Sanctuary' Fight".<span class="citation">Words by Glenn Thrush</span></div>
 
-            <img class="lozad lazyload" data-src="nytimes/nyt6.png">
-            <div class="caption">"Population: One".<span class="citation">Words and Photographs by Ruth Fremson</span></div>
+    <img class="col23 lozad lazyload" data-src="nytimes/nyt6.png">
+    <div class="col23 caption">"Population: One".<span class="citation">Words and Photographs by Ruth Fremson</span></div>
            
-            <img class="lozad lazyload" data-src="nytimes/viljandi.png">
-            <div class="caption">"A Town Bursting with Life, but Overlooked by Europe's Tourists".<span class="citation">Words and Photographs by Gabriel Leigh</span></div>
+    <img class="col23 lozad lazyload" data-src="nytimes/viljandi.png">
+    <div class="col23 caption">"A Town Bursting with Life, but Overlooked by Europe's Tourists".<span class="citation">Words and Photographs by Gabriel Leigh</span></div>
 
-            <img class="lozad lazyload" data-src="nytimes/blackvoters.png">
-            <div class="caption">"Black Voters Change the Look of Power in New York".<span class="citation">By Katie Glueck and Jeffery C. Mays</span></div>
+    <img class="col23 lozad lazyload" data-src="nytimes/blackvoters.png">
+    <div class="col23 caption">"Black Voters Change the Look of Power in New York".<span class="citation">By Katie Glueck and Jeffery C. Mays</span></div>
 
-            <img class="lozad lazyload" data-src="nytimes/nyt152.png">
-            <div class="caption">Obituary: Donald Rumsfeld.<span class="citation">Words by Robert D. McFadden</span></div>
+    <img class="col23 lozad lazyload" data-src="nytimes/nyt152.png">
+    <div class="col23 caption">Obituary: Donald Rumsfeld.<span class="citation">Words by Robert D. McFadden</span></div>
 
-            <img class="lozad lazyload" data-src="nytimes/powell-obit.png">
-            <div class="caption">Obituary: Collin Powell.<span class="citation">Words by Eric Schmitt</span></div>
+    <img class="col23 lozad lazyload" data-src="nytimes/powell-obit.png">
+    <div class="col23 caption">Obituary: Collin Powell.<span class="citation">Words by Eric Schmitt</span></div>
 
-            <div class="subhead">Art Direction: Sketchbook </div>
-            <div class="caption">On Saturdays and Sundays, the Times prints an installment of 'Sketchbook', a standalone, black and white art spot on page 3. Sketchbook asks illustrators and artists to respond to current events in a visually compelling way. </div>
-                <img class="lozad lazyload" data-src="nytimes/powershift.png">
-                <br>
-                <img class="lozad lazyload" data-src="nytimes/backandforth.png">
-                <br>
-                <img class="lozad lazyload" data-src="nytimes/petboom.png">
-                <br>
-                <img class="lozad lazyload" data-src="nytimes/naturalselection.png">
+    <div class="col23 subhead">Art Direction: Sketchbook </div>
+    <div class="col23 caption">On Saturdays and Sundays, the Times prints an installment of 'Sketchbook', a standalone, black and white art spot on page 3. Sketchbook asks illustrators and artists to respond to current events in a visually compelling way. </div>
+        <img class="col23 lozad lazyload" data-src="nytimes/powershift.png">
+        <br>
+        <img class="col23 lozad lazyload" data-src="nytimes/backandforth.png">
+        <br>
+        <img class="col23 lozad lazyload" data-src="nytimes/petboom.png">
+        <br>
+        <img class="col23 lozad lazyload" data-src="nytimes/naturalselection.png">
 
-    <div class="subhead">Art Direction: Times Insider</div>
-    <div class="caption">Times Insider delivers behind-the-scenes insights into how Times journalism comes together. Each day, a new installment can be found online and on page 2 of the print newspaper.</div>
-    <div class="diptych">
+    <div class="col23 subhead">Art Direction: Times Insider</div>
+    <div class="col23 caption">Times Insider delivers behind-the-scenes insights into how Times journalism comes together. Each day, a new installment can be found online and on page 2 of the print newspaper.</div>
+    <div class="col23 diptych">
         <img class="lozad lazyload" data-src="nytimes/poetryinsider_deep.jpg">
         <img class="lozad lazyload" data-src="nytimes/stapleton.jpg">
     </div>
-    <div class="diptych caption"><span>Antoine Cossé</span><span>Holly Stapleton</span></div>
-    <div class="diptych">
+    <div class="col23 caption"><span>Left: Antoine Cossé. Right: Holly Stapleton.</span></div>
+    <div class="col23 diptych">
         <img class="lozad lazyload" data-src="nytimes/assault.png">
         <img class="lozad lazyload" data-src="nytimes/fike.png">
     </div>
-    <div class="diptych caption"><span>Jordan Gale</span><span>Daniel Prakopcyk</span></div>
+    <div class="col23 caption"><span>Left: Jordan Gale. Right: Daniel Prakopcyk</span></div>
 
-      
-    </div>
-
-
-    <div id="projfooter">
-        <a class="btn-back flip">Back</a>
-        <a class="btn-next flip">Next</a>
-    </div>
-   
-<!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
 </section>
-<section class="bottom"></section>
+
+    <div id="projfooter"></div>
+<!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
+
 
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
