--- a/sober21.html
+++ b/sober21.html
@@ -3,60 +3,54 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>mikki.studio: Sober 21</title>
+    <title>Mikki Janower: Sober 21</title>
     <meta property="og:image" content="sober21/IMG_6556.jpg">
 </head>
 <body>
-    <section class="top">
-        <a class="name"></a>
-    <a class="projectTitle">Sober 21</a>
-    </section>
-<!--------------------------insert project information in this section ONLY----------------------->
-   <section id="project" style="display:none">
+    <section id=navcontainer></section>
 
-    <div id="description"> <p><i><a href="https://thecreativeindependent.com" target="_blank">Sober 21</a></i> is a compendium of essays by, and interviews with, sober musicians. Through open conversation and intimate anecdotes, the zine raises awareness and provides resources for anyone seeking, grappling with, or curious about sobriety in the music industry.</p>
+<!--------------------------insert project information in this section ONLY----------------------->
+<section id="gallery">
+
+    <div class="description"> 
+        <h2>Sober 21<br><span class="client">The Creative Independent</span></h2>
+        <p><i><a href="https://thecreativeindependent.com" target="_blank">Sober 21</a></i> is a compendium of essays by, and interviews with, sober musicians. Through open conversation and intimate anecdotes, the zine raises awareness and provides resources for anyone seeking, grappling with, or curious about sobriety in the music industry.</p>
         <p>The zine uses negative space in lieu of traditional forms of image-making, creating moments of noise, interruption, reflection, and pause.</p>
         <p>Edited by Elia Einhorn and published by the Creative Independent. As seen on Coolhunting, Pitchfork, Stereogum, Rolling Stone, and others.</p>
         <p><a href="https://57a8d5170bf79d28f69a90e0.cloud-preview.siteleaf.com/library/sober-21/" target = "_blank">Read <i>Sober 21</i> on The Creative Independent</a> or <a href="https://coolhunting.com/culture/the-creative-independents-sober-21-free-zine-for-people-who-struggle-with-sobriety/" target = "_blank">read about <i>Sober 21</i> on Coolhunting.</a></p>
     </div>
 
-    <div id="gallery">
-        <img src="sober21/IMG_6556.jpg">
-        <div class="diptych">
+        <img class="col23" src="sober21/IMG_6556.jpg">
+        <div class="col23 diptych">
             <img class="lozad lazyload" data-src="sober21/IMG_6445 copy.jpg">  
             <img class="lozad lazyload" data-src="sober21/IMG_6476.jpg">
         </div>
-        <div class="caption"><i>Sober 21</i>, 2021</div>
-            <img class="lozad lazyload" data-src="sober21/Sober 21 40 copy.png">
-            <img class="lozad lazyload" data-src="sober21/Sober21 72 copy.png">
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="sober21/Sober21 32 copy.png">
-                <img class="lozad lazyload" data-src="sober21/Sober 21 30 copy.png">
-            </div>
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="sober21/Sober 21 12 copy.png">
-                <img class="lozad lazyload" data-src="sober21/Sober 21 16 copy.png">
-            </div>
-            <img class="lozad lazyload" data-src="sober21/Sober21 76 copy.png">
-            <img class="lozad lazyload" data-src="sober21/Sober 21 44 copy.png">
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="sober21/Sober 21 62 copy.png">
-                <img class="lozad lazyload" data-src="sober21/Sober 21 64 copy.png">
-            </div>
-            <img loop=infinite class="lozad" data-src="sober21/Sober 21 copy.gif">
-    </div>
-       
-    <div id="projfooter">
-        <a class="btn-back flip">Back</a>
-        <a class="btn-next flip">Next</a>
-    </div>
+        <div class="col23 caption"><i>Sober 21</i>, 2021</div>
+        <img class="col123 lozad lazyload" data-src="sober21/Sober 21 40 copy.png">
+        <img class="col123 lozad lazyload" data-src="sober21/Sober21 72 copy.png">
+        <div class="col123 diptych">
+            <img class="lozad lazyload" data-src="sober21/Sober21 32 copy.png">
+            <img class="lozad lazyload" data-src="sober21/Sober 21 30 copy.png">
+         </div>
+        <div class="col123 diptych">
+            <img class="lozad lazyload" data-src="sober21/Sober 21 12 copy.png">
+            <img class="lozad lazyload" data-src="sober21/Sober 21 16 copy.png">
+        </div>
+        <img class="col12 lozad lazyload" data-src="sober21/Sober 21 44 copy.png">
+        <img class="col3 lozad lazyload" data-src="sober21/Sober21 76 copy.png">
+        <div class="col23 diptych">
+            <img class="lozad lazyload" data-src="sober21/Sober 21 62 copy.png">
+            <img class="lozad lazyload" data-src="sober21/Sober 21 64 copy.png">
+        </div>
+        <img loop=infinite class="col23 lozad" data-src="sober21/Sober 21 copy.gif">
+
+</section>      
+    <div id="projfooter"></div>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-</section>
-<section class="bottom"></section>
+
 
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
