--- a/spaceopera.html
+++ b/spaceopera.html
@@ -3,47 +3,39 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>mikki.studio: Space Opera</title>
+    <title>Mikki Janower: Illustrations, The Baffler</title>
     <meta property="og:image" content="spaceopera/spaceopera1.jpeg">
 </head>
 <body>
-    <section class="top sticky">
-        <a class="name"></a>
-    <a class="projectTitle">Illustration: The Baffler</a>
-    </section>
+    <section id=navcontainer></section>
 <!--------------------------insert project information in this section ONLY----------------------->
-   <section id="project" style="display:none">
+<section id="gallery">
  
-    <div id="description"><p>Illustrations for <a href = "https://thebaffler.com/" target="_blank">The Baffler</a>. Initially created as competing directions for the same assignment, the two were published years apart in strikingly different contexts.</p>
+    <div class="description">
+        <h2>Illustration<br><span class="client">The Baffler</span></h2>
+        <p>Illustrations for <a href = "https://thebaffler.com/" target="_blank">The Baffler</a>. Initially created as competing directions for the same assignment, the two were published years apart in strikingly different contexts.</p>
         <p>The cover for issue 61, <i>Space Opera</i>, features wide-angle stills of planet Earth as seen from space. Footage from the Apollo missions was combined simply, leaving room for interpretation: the result looks equal parts a flag of self-sovereignty, a diagrammatic close-up, or an abstract meditation on space.</p>
         <p>In Issue 67, <i>The National Interest</i>, birds-eye landscapes come together to form a tapestry. The work accompanies an argument for global confederacy, using the EU as a model for a federation of republics.</p>
-    <p>Art direction by <a href="https://noideas.website/" target="_blank">No Ideas</p>.
+        <p>Art direction by <a href="https://noideas.website/" target="_blank">No Ideas.</a></p>
     </div>
-</div>
 
-    <div id="gallery">
-        <img src="spaceopera/spaceopera1.png"> 
-        <div class="caption">Cover art for vol. 61, <i>Space Opera</i>. Footage from the Apollo Missions.</div>
-        <img class="lozad lazyload" data-src="spaceopera/spaceopera3.png"> 
-        <div class="caption">Illustration for 'Brussels or Bust', from vol. 67, <i>The National Interest</i>. Footage from Google Earth.</div>
-    </div>
-       
-    <div id="projfooter">
-        <a class="btn-back flip">Back</a>
-        <a class="btn-next flip">Next</a>
-    </div>
+    <img class="col23" src="spaceopera/spaceopera1.png"> 
+   <!--- <div class="col23 caption">Cover art for vol. 61, <i>Space Opera</i>. Footage from the Apollo Missions.</div> -->
+    <img class="col23 lozad lazyload" data-src="spaceopera/spaceopera3.png">
+   <!-- <div class="col23 caption">Illustration for 'Brussels or Bust', from vol. 67, <i>The National Interest</i>. Footage from Google Earth.</div>-->
+
+</section>
+<div id="projfooter"></div>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-</section>
 <!--<div class="querytown"></div>-->
-<section class="bottom"></section>
 
-    <script src="assets/jquery.min.js"></script>
-    <script src="js/projects.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
+
+<script src="assets/jquery.min.js"></script>
+<script src="js/projects.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
 
 </body>
