--- a/community.html
+++ b/community.html
@@ -2,67 +2,56 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>mikki.studio: A Community is a Garden</title>
+    <title>Mikki Janower: A Community is a Garden</title>
     <meta property="og:image" content="community/cover.jpg">
 </head>
 
 <body>
-    <section class="top">
-        <a class="name"></a>
-        <h3 class="projectTitle">A Community is a Garden</h3>
-    </section>
-
-    <section id="project" style="display:none">
-
+    <section id=navcontainer></section>
 <!--------------------------insert project information below this line----------------------->
-
-    <div id="description">
+<div id="gallery">
+    <div class="description">
+        <h2>A Community is a Garden<br><span class="client">The Guggenheim Museum</span></h2>
         <p><i>A Community is a Garden</i> is a toolkit for artistic practice towards grassroots change. Filled with interviews, exercises, and prompts for reflection, the book is an accessible resource for artists, communities, and institutions looking to build and strengthen long-term partnerships.</p>
         <p>This book was developed over the course of the inaugural Summer Research Practicum at the <a href="https://www.guggenheim.org/" target="_blank">Guggenheim Museum.</a> You can read, print, and share it for free at <a href="https://arena-attachments.s3.amazonaws.com/9400568/b17b697286cc21f202f2f8458bdbc35b.pdf?1604622316" target="_blank">bit.ly/CommunityGardenToolkit</a>.</p>
-    <p>A collective effort with Kanyinsola Anifowoshe, <a href="jordanjweber.com" target="_blank">Jordan Weber</a>, <a href="https://arthistory.wustl.edu/people/ila-sheren" target="_blank">Ila N. Sheren</a>, <a href="brianharnetty.com" target="_blank">Brian Harnetty</a>, Cheryl Blosser, Efe Igor, <a href="birdcloset.com" target="_blank">Bird Closet</a>, <a href="genomicgastronomy.com" target="_blank">Center for Genomic Gastronomy</a>, Rob Gee, Alicia Gee, Syd Gee, <a href="prestoncthompson.com" target="_blank">Preston Thompson</a>, <a href="http://jackiiepopjes.com/" target="_blank">and Jackiie Popjes</a>.</p></div>
+            <p>A collective effort with Kanyinsola Anifowoshe, <a href="jordanjweber.com" target="_blank">Jordan Weber</a>, <a href="https://arthistory.wustl.edu/people/ila-sheren" target="_blank">Ila N. Sheren</a>, <a href="brianharnetty.com" target="_blank">Brian Harnetty</a>, Cheryl Blosser, Efe Igor, <a href="birdcloset.com" target="_blank">Bird Closet</a>, <a href="genomicgastronomy.com" target="_blank">Center for Genomic Gastronomy</a>, Rob Gee, Alicia Gee, Syd Gee, <a href="prestoncthompson.com" target="_blank">Preston Thompson</a>, <a href="http://jackiiepopjes.com/" target="_blank">and Jackiie Popjes</a>.</p>
     </div>
 
-    <div id="gallery"> 
-        <img src="community/cover.jpg">
-            <img class="lozad lazyload" data-src="community/contents.jpg">
-            <img class="lozad lazyload" data-src="community/40-41.jpg">
-            <img class="lozad lazyload" data-src="community/22-23.jpg">
-            <div class="diptych">
-                <img class="lozad lazyload" data-src="community/20-21.jpg">
-                <img class="lozad lazyload" data-src="community/14-15.jpg">  
-            </div>
-            <img class="lozad lazyload" data-src="community/12-13.jpg">
-            <div class="caption"><i>A Community is a Garden</i>, 2020.<span class="citation">Typeset in Minipax, designed by Raphaël Ronot for Velvetyne Type Foundry</span></div>
-            <div class="triptych">
+        <img class="col23" src="community/cover.jpg">
+
+
+        <img class="lozad lazyload col3" data-src="community/22-23.jpg">
+        <img class="lozad lazyload col12" data-src="community/40-41.jpg">
+        <img class="lozad lazyload col123" data-src="community/contents.jpg">
+        <div class="diptych col23">
+            <img class="lozad lazyload" data-src="community/20-21.jpg">
+            <img class="lozad lazyload" data-src="community/14-15.jpg">  
+        </div>
+        <img class="lozad lazyload col23" data-src="community/12-13.jpg">
+        <div class="caption col2"><i>A Community is a Garden</i>, 2020.<span class="citation">Typeset in Minipax, designed by Raphaël Ronot for Velvetyne Type Foundry</span></div>
+        <div class="triptych col23">
                 <img class="lozad lazyload" data-src="community/44-45.jpg">
                 <img class="lozad lazyload" data-src="community/48-49.jpg">
                 <img class="lozad lazyload" data-src="community/50-51.jpg">
-            </div>
-            <div class="triptych">
+        </div>
+        <div class="triptych col23">
                 <img class="lozad lazyload" data-src="community/36-37.jpg">
                 <img class="lozad lazyload" data-src="community/12-13.jpg">
                 <img class="lozad lazyload" data-src="community/intro.jpg">
-            </div>
-            <img class="lozad lazyload" data-src="community/practicepage.jpg">
-            <img class="lozad lazyload" data-src="community/32-33.jpg"> 
-            <div class="diptych">
-                    <img class="lozad lazyload" data-src="community/34-35.jpg">  
-                    <img class="lozad lazyload" data-src="community/62-63.jpg">
-            </div>
-        <img class="lozad lazyload" data-src="community/back.jpg">
-    </div>
-       
-        <div id="projfooter">
-            <a class="btn-back flip">Back</a>
-            <a class="btn-next flip">Next</a>
         </div>
+        <img class="lozad lazyload col23" data-src="community/practicepage.jpg">
+        <div class="diptych col123">
+            <img class="lozad lazyload" data-src="community/32-33.jpg"> 
+            <img class="lozad lazyload" data-src="community/34-35.jpg"> 
+        </div> 
+        <img class="lozad lazyload col123" data-src="community/62-63.jpg">
+        <img class="lozad lazyload col23" data-src="community/back.jpg">
+    </div>
 
+        <div id="projfooter"></div>
 <!--------------------------end of project-specific code------------------------->
-</section>
- <section class="bottom"></section>
 
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
