--- a/reflections.html
+++ b/reflections.html
@@ -3,55 +3,48 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>mikki.studio: Reflections on Practice</title>
+    <title>Mikki Janower: Reflections on Practice</title>
     <meta property="og:image" content="reflections/IMG_6544-copy.jpg">
 </head>
 <body>
-    <section class="top">
-        <a class="name"></a>
-        <a class="projectTitle">Reflections on Practice</a>
-    </section>
+    <section id=navcontainer></section>
 <!--------------------------insert project information in this section ONLY----------------------->
-    <section id="project" style="display:none">
+<section id="gallery">
 
-    <div id="description"><p><i>Reflections on Practice</i> documents the creative process in progress. The series of booklets chronicles six months of lessons across disciplines, spanning print design, web development, drone photography, and microfiction.</p>
+    <div class="description">
+        <h2>Reflections on Practice<br></h2>
+        <p><i>Reflections on Practice</i> documents the creative process in progress. The series of booklets chronicles six months of lessons across disciplines, spanning print design, web development, drone photography, and microfiction.</p>
         <p>Each book combines traditional modes of process documentation with found essays and written ruminations. The result is an intimate exploration of academic learning and personal growth.</p>
         <p>Compiled and designed over the course of the Fall 2019 semester at the Sam Fox School of Design & Visual Arts</p>
     </div>
 
-    <div id="gallery">
-        <img src="reflections/IMG_6544-copy.jpg">
-        <div class="caption"><i>Reflections on Practice</i>, 2019</div>
-        <img class="lozad lazyload" data-src="reflections/IMG_6714-copy.jpg">
-        <div class="diptych">
+    <img class="col23" src="reflections/IMG_6544-copy.jpg">
+        <div class="col23 caption"><i>Reflections on Practice</i>, 2019</div>
+        <img class="col23 lozad" data-src="reflections/IMG_6605-copy.jpg">
+        <img class="col123 lozad lazyload" data-src="reflections/IMG_6714-copy.jpg">
+        <div class="col123 diptych">
             <img class="lozad lazyload" data-src="reflections/IMG_6642-copy.jpg">
             <img class="lozad lazyload" data-src="reflections/IMG_6658-copy.jpg">
         </div>
-        <div class="triptych">
+        <div class="col123 triptych">
             <img class="lozad lazyload" data-src="reflections/IMG_6740-copy.jpg">
             <img class="lozad lazyload" data-src="reflections/IMG_6595-copy.jpg">
             <img class="lozad lazyload" data-src="reflections/IMG_6764-copy.jpg">
         </div>
-        <img class="lozad" data-src="reflections/IMG_6605-copy.jpg">
-        <div class="diptych">
+        <div class="col123 diptych">
             <img class="lozad lazyload" data-src="reflections/IMG_6785-copy.jpg">
             <img class="lozad lazyload" data-src="reflections/IMG_6772.jpg">
         </div>
-        <img class="lozad lazyload" data-src="reflections/IMG_6800-copy.jpg">
-        <img class="lozad lazyload" data-src="reflections/IMG_6576-copy.jpg">
-         </div>
-       
-         <div id="projfooter">
-            <a class="btn-back flip">Back</a>
-            <a class="btn-next flip">Next</a>
-        </div>
+        <img class="col123 lozad lazyload" data-src="reflections/IMG_6800-copy.jpg">
+        <img class="col23 lozad lazyload" data-src="reflections/IMG_6576-copy.jpg">
+
+</section>       
+         <div id="projfooter"></div>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-</section>
-<section class="bottom"></section>
+
     
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
